--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@types/react-dom": "16.9",
     "react": "16.9.0",
     "react-dom": "16.9.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "react-test-renderer": "16.9.0",
     "typescript": "4.4.3"
   },
@@ -41,7 +41,7 @@
     "@types/enzyme": "3.10.3",
     "@types/enzyme-adapter-react-16": "1.0.6",
     "@types/enzyme-to-json": "1.5.3",
-    "@types/jest": "24.9.1",
+    "@types/jest": "^27.4.1",
     "@types/react-test-renderer": "16.9.0",
     "@typescript-eslint/eslint-plugin": "4.32.0",
     "@typescript-eslint/parser": "4.32.0",
