--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "@types/node": "16.10.2",
     "@types/react": "16.9",
     "@types/react-dom": "16.9",
-    "react": "16.9.0",
-    "react-dom": "16.9.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-scripts": "4.0.3",
     "react-test-renderer": "16.9.0",
     "typescript": "4.4.3"
