--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "enzyme-to-json": "3.4.2",
     "eslint": "7.32.0",
     "eslint-plugin-react": "7.26.0",
-    "jest-html-reporter": "3.4.2"
+    "jest-html-reporter": "^3.4.2"
   },
   "jest": {
     "collectCoverageFrom": [
